--- a/next-installation/package.json
+++ b/next-installation/package.json
@@ -12,7 +12,10 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0"
+    "react-screen-keyboard": "^1.4.1",
+    "react-scripts": "3.3.0",
+    "react-simple-keyboard": "^2.1.97",
+    "styled-components": "^5.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
