--- a/next-installation/package.json
+++ b/next-installation/package.json
@@ -11,6 +11,7 @@
     "mobx-react": "^6.1.5",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-draggable": "^4.2.0",
     "react-router-dom": "^5.1.2",
     "react-screen-keyboard": "^1.4.1",
     "react-scripts": "3.3.0",
