--- a/next-installation/package.json
+++ b/next-installation/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.8.3",
+    "@material-ui/lab": "^4.0.0-alpha.39",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -15,6 +16,7 @@
     "react-router-dom": "^5.1.2",
     "react-screen-keyboard": "^1.4.1",
     "react-scripts": "3.3.0",
+    "react-select": "^3.0.8",
     "react-simple-keyboard": "^2.1.97",
     "styled-components": "^5.0.0"
   },
