--- a/next-installation/package.json
+++ b/next-installation/package.json
@@ -11,6 +11,7 @@
     "mobx": "^5.15.2",
     "mobx-react": "^6.1.5",
     "react": "^16.12.0",
+    "react-card-flip": "^1.0.10",
     "react-dom": "^16.12.0",
     "react-draggable": "^4.2.0",
     "react-router-dom": "^5.1.2",
