--- a/next-installation/package.json
+++ b/next-installation/package.json
@@ -10,15 +10,18 @@
     "@testing-library/user-event": "^7.1.2",
     "mobx": "^5.15.2",
     "mobx-react": "^6.1.5",
+    "qrcode.react": "^1.0.0",
     "react": "^16.12.0",
     "react-card-flip": "^1.0.10",
     "react-dom": "^16.12.0",
     "react-draggable": "^4.2.0",
+    "react-movable": "^2.4.0",
     "react-router-dom": "^5.1.2",
     "react-screen-keyboard": "^1.4.1",
     "react-scripts": "3.3.0",
     "react-select": "^3.0.8",
     "react-simple-keyboard": "^2.1.97",
+    "shortid": "^2.2.15",
     "styled-components": "^5.0.0"
   },
   "scripts": {
