--- a/next-installation/package.json
+++ b/next-installation/package.json
@@ -11,5 +11,8 @@
   "cacheDirectories": [
     "client/node_modules",
     "server/node_modules"
-  ]
+  ],
+  "engines": {
+    "node": "10.14.2"
+  }
 }
