--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Kacim Fedjkhi <kacim.fedjkhi@student.howest.be",
   "license": "MIT",
   "scripts": {
-    "start": "cd server/ && yarn && yarn start && node index.js",
+    "start": "cd server/ && yarn && yarn start",
     "build": "cd client/ && yarn && yarn build"
   },
   "cacheDirectories": [
